style.css
/* ... */
.contactForm {
    padding: 0 20% 8% 20%;
}

.form {
    flex: 1 1 100%;
    max-width: 600px;
    margin: 0 auto;
    padding: 3%;
}

.form > form > p {
    font-size: 1.1em;
    margin: 2% 0;
    display: inline-block;
    width: 100%;
}

.form > form > p > input {
    font-size: 1.1em;
    width: 100%;
    font-family: 'Comfortaa', 'Spinnaker', sans-serif;
    color:#000;
}

.form > form > p > textarea {
    font-size: 1.1em;
    font-family: 'Comfortaa', 'Spinnaker', sans-serif;
    border: 1px solid #ccc;
    width: 100%;
    height: 80px;
    color: #000;
}

.form > form > p > input, .form > form > p > textarea {
    border: 1px solid #ccc;
    padding:1em;
    color: #000;
}

.submit > button {
    font-family: 'Comfortaa', 'Spinnaker', sans-serif;
    font-size: 1.5em;
    width: 100%;
    font-weight: 300;
    padding: 2%;
    color: #fff;
    box-shadow: inset 0 0 15px 2px rgba(143, 252, 255, .8), 0 0 15px 2px rgba(143, 252, 255, .8);
    border: 2px solid #8ffcff;
    border-radius: 10px;
    background-color: #131313;
    transition: border .25s linear, box-shadow .25s linear;
}

.submit > button:hover {
    border: 2px solid #FF8F0D;
    box-shadow: inset 0 0 15px 2px rgba(255,143,13,.8), 0 0 15px 2px rgba(255,143,13,.8);
    border-radius: 10px;
    transition: border .25s linear, box-shadow .25s linear;
}

.form > form > p > input:hover, .form > form > p > textarea:hover {
}

/* slidey text thingy code stuff n things *******************************************************************************
@keyframes reveal-text {
    from {
        clip-path: inset(0 100% 0 0);
    }
    to {
        clip-path: inset(0 0 0 0);
    }
}
@keyframes revealer-text {
    0%, 50% {
        transform-origin: 0 50%;
    }
    60%, 100% {
        transform-origin: 100% 50%;
    }
    60% {
        transform: scaleX(1);
    }
    100% {
        transform: scaleX(0);
    }
}
.reveal-text, .reveal-text::after, .reveal-text2, .reveal-text2::after {
    animation-iteration-count: 1;
    animation-duration: 1500ms;
    animation-fill-mode: both;
    animation-timing-function: cubic-bezier(0.2, 1, 0.4, 1);
}
.reveal-text, .reveal-text::after {
    animation-delay: .5s;
}
.reveal-text2, .reveal-text2::after {
    animation-delay: 1.5s;
}
.reveal-text, .reveal-text2 {
    position: relative;
    display: inline-block;
    user-select: none;
    animation-name: reveal-text;
    white-space: nowrap;
    cursor: default;
}
.reveal-text, .reveal-text2 {
    background-image: -webkit-linear-gradient(#FF530D 0%, #FFCA0D 100%);
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
}
.reveal-text::after, .reveal-text2::after {
    content: "";
    position: absolute;
    z-index: 999;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-color: #131313;
    transform: scaleX(0);
    transform-origin: 0 50%;
    pointer-events: none;
    animation-name: revealer-text;
}
.reveal-text::after {
    color: #000;
}
.reveal-text2::after {
    color: #fff;
}

/* INTRO ANIMATION **************************************************************************************************************** */

@keyframes disappear {
    0% {
        height: 100vh;
        padding: 2%;
    }
    100% {
        height: 0;
        padding: 0 2%;
    }
}
/* Unused */
@keyframes appear {
    0% {
        opacity: 0;
    }
    80% {
        opacity: 1;
    }
}

@keyframes introSequence {
    0% {
        text-shadow: 0 0 50px #fff;
        letter-spacing: .6em;
        opacity: 0.2;
        transform: rotateY(-40deg);
    }
    50% {
        text-shadow: 0 0 1px #fff;
        letter-spacing: .3em;
        opacity: 0.5;
        transform: rotateY(0deg);
    }
    75% {
        text-shadow: 0 0 1px #fff;
        opacity: 0.8;
        letter-spacing: .15em;
        filter:blur(0);
        transform: translateY(0px);
    }
    100% {
        text-shadow: 0 0 10px #fff;
        opacity: 0;
        filter:blur(20px);
        transform: translateY(-50px);
    }
}

@keyframes fade {
    0% {
        opacity: 0;
    }
    80% {
        opacity: 1;
    }
    100% {
        opacity: 0;
    }
}

@keyframes fadeTwo {
    0% {
        opacity: 0;
        text-shadow: 0 0 10px #fff;
    }
    50% {
        opacity: 1;
        text-shadow: 0 0 1px #fff;
    }
    100% {
        opacity: 0;
    }
}

/*#main {
    opacity: 0;
    animation:appear 2s forwards;
    animation-delay: 14s;
}*/

.smokeContainer {
    animation: disappear 2s forwards;
    animation-delay: 14s;
    background: #131313;
    padding: 2% 0;
    height: 100vh;
    width: 100%;
}

#smokeContainer2 {
    position: relative;
    height: 100%;
}

.smokeText {
    left: 0;
    min-width: 100%;
    position: absolute;
}

.smokeText h2 {
    -webkit-animation:introSequence 4.2s linear forwards;
    -moz-animation:introSequence 4.2s linear forwards;
    animation:introSequence 4.2s linear forwards;
    /*animation-play-state: paused;*/
    color: white;
    font-family: 'Dosis', 'Lato', sans-serif;
    font-size: 80px;
    font-weight: 200;
    letter-spacing: 15px;
    margin: 0;
    opacity: 0;
    overflow: hidden;
    padding: 0;
    text-align: center;
    text-transform: uppercase;
    width: 100%;
    white-space: nowrap;
}

/* Sequence adaptive */
@media screen and (max-width: 400px) {
    .smokeText h2 {
        font-size: 20px;
    }
}
@media screen and (min-width: 401px) and (max-width: 550px) {
    .smokeText h2 {
        font-size: 27px;
    }
}
@media screen and (min-width: 551px) and (max-width: 700px) {
    .smokeText h2 {
        font-size: 35px;
    }
}
@media screen and (min-width: 701px) and (max-width: 900px) {
    .smokeText h2 {
        font-size: 46px;
    }
}
@media screen and (min-width: 901px) and (max-width: 1024px) {
    .smokeText h2 {
        font-size: 59px;
    }
}
@media screen and (min-width: 1025px) and (max-width: 1200px) {
    .smokeText h2 {
        font-size: 65px;
    }
}
/* ... */

